NGROK URL UPDATED

--- a/store.html
+++ b/store.html
@@ -25,10 +25,23 @@
       border-radius: 10px;
     }
 
+    .large-button2 {
+      padding: 20px 40px;
+      font-size: 30px;
+      background-color: green;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      margin-top: 10px;
+    }
+
   </style>
   <body>
     <div class="button-container">
-      <button class="large-button" onclick="triggerCheckout()">Checkout With GrowwX</button>
+      <div>
+        <button class="large-button" onclick="checkoutOnFlaars()">Checkout With GrowwX Flaars</button>
+        <button class="large-button2" onclick="checkoutOnAartzy()">Checkout With GrowwX Aartzy</button>
+      </div>
     </div>
   </body>
 </html>
