--- a/store.html
+++ b/store.html
@@ -28,7 +28,17 @@
     .large-button2 {
       padding: 20px 40px;
       font-size: 30px;
-      background-color: green;
+      background-color: rgb(159, 5, 5);
+      color: white;
+      border: none;
+      border-radius: 10px;
+      margin-top: 10px;
+    }
+
+    .large-button3 {
+      padding: 20px 40px;
+      font-size: 30px;
+      background-color: greenyellow;
       color: white;
       border: none;
       border-radius: 10px;
@@ -41,6 +51,7 @@
       <div>
         <button class="large-button" onclick="checkoutOnFlaars()">Checkout With GrowwX Flaars</button>
         <button class="large-button2" onclick="checkoutOnAartzy()">Checkout With GrowwX Aartzy</button>
+        <button class="large-button3" onclick="checkoutOnSpinBot()">Checkout With GrowwX SpinBot</button>
       </div>
     </div>
   </body>
