--- a/store.html
+++ b/store.html
@@ -50,6 +50,7 @@
     <div class="button-container">
       <div>
         <button class="large-button" onclick="checkoutOnFlaars()">Checkout With GrowwX Flaars</button>
+        <button class="large-button" onclick="checkoutOnFlaarsGamma()">GrowwX Flaars GAMMA</button>
         <button class="large-button2" onclick="checkoutOnAartzy()">Checkout With GrowwX Aartzy</button>
         <button class="large-button3" onclick="checkoutOnSpinBot()">Checkout With GrowwX SpinBot</button>
       </div>
