UI Changes and Luxury kase added

--- a/store.html
+++ b/store.html
@@ -44,6 +44,15 @@
       border-radius: 10px;
       margin-top: 10px;
     }
+    .large-button4 {
+      padding: 20px 40px;
+      font-size: 30px;
+      background-color: chocolate;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      margin-top: 10px;
+    }
 
   </style>
   <body>
@@ -53,7 +62,14 @@
         <button class="large-button" onclick="checkoutOnFlaarsGamma()">GrowwX Flaars GAMMA</button>
         <button class="large-button2" onclick="checkoutOnAartzy()">Checkout With GrowwX Aartzy</button>
         <button class="large-button3" onclick="checkoutOnSpinBot()">Checkout With GrowwX SpinBot</button>
+        <button class="large-button3" onclick="checkoutOnSpinBotGamma()">GrowwX SpinBot Gamma</button>
+        <button class="large-button4" onclick="checkoutOnLuxuryKase()">GrowwX Luxury Kase</button>
+        <button class="large-button4" onclick="checkoutOnLuxuryKaseGamma()">GrowwX Luxury Kase Gamma</button>
       </div>
     </div>
   </body>
+  <script>
+    localStorage.setItem("_shopify_sa_p", "fbclid%3DPAAaYcp30odM6EpJZITSWfMlqTXp55CayIKGnpI-IAfj9pEGFK2k9gjfn3T6M_aem_AfcZ2ntkmw0fo-OxYWLTdXf6W_Kg2hKSqJePO6raf-zodZg6v0ciZ__idIYTXUAQJlrvQ3Ni6NC20qTxsgz3oCglBMO1ZlGNQtF9Vq6TvLS_p_vASbb-0_darLycsopLSx8")
+    console.log(localStorage.getItem("_shopify_sa_p"), "_shopify_sa_p")
+  </script>
 </html>
