--- a/store.html
+++ b/store.html
@@ -16,13 +16,14 @@
       height: 100vh;
     }
 
-    .large-button {
+    .large-button1 {
       padding: 20px 40px;
       font-size: 30px;
       background-color: skyblue;
       color: white;
       border: none;
       border-radius: 10px;
+      margin-top: 10px;
     }
 
     .large-button2 {
@@ -58,12 +59,12 @@
   <body>
     <div class="button-container">
       <div>
-        <button class="large-button" onclick="checkoutOnFlaars()">Checkout With GrowwX Flaars</button>
-        <button class="large-button" onclick="checkoutOnFlaarsGamma()">GrowwX Flaars GAMMA</button>
-        <button class="large-button2" onclick="checkoutOnAartzy()">Checkout With GrowwX Aartzy</button>
-        <button class="large-button3" onclick="checkoutOnSpinBot()">Checkout With GrowwX SpinBot</button>
+        <button class="large-button1" onclick="checkoutOnFlaars()">GrowwX Flaars Local</button>
+        <button class="large-button1" onclick="checkoutOnFlaarsGamma()">GrowwX Flaars Gamma</button>
+        <button class="large-button2" onclick="checkoutOnAartzy()">GrowwX Aartzy Local</button>
+        <button class="large-button3" onclick="checkoutOnSpinBot()">GrowwX SpinBot Local</button>
         <button class="large-button3" onclick="checkoutOnSpinBotGamma()">GrowwX SpinBot Gamma</button>
-        <button class="large-button4" onclick="checkoutOnLuxuryKase()">GrowwX Luxury Kase</button>
+        <button class="large-button4" onclick="checkoutOnLuxuryKase()">GrowwX Luxurykase Local</button>
         <button class="large-button4" onclick="checkoutOnLuxuryKaseGamma()">GrowwX Luxury Kase Gamma</button>
       </div>
     </div>
