--- a/store.html
+++ b/store.html
@@ -59,7 +59,7 @@
   <body>
     <div class="button-container">
       <div>
-        <button class="large-button1" onclick="checkoutOnFlaars()">GrowwX Flaars Local</button>
+        <button class="large-button1" style="margin-top: 150px;" onclick="checkoutOnFlaars()">GrowwX Flaars Local</button>
         <button class="large-button1" onclick="checkoutOnFlaarsGamma()">GrowwX Flaars Gamma</button>
         <button class="large-button2" onclick="checkoutOnAartzy()">GrowwX Aartzy Local</button>
         <button class="large-button3" onclick="checkoutOnSpinBot()">GrowwX SpinBot Local</button>
